--- a/client/assets/styles/style.css
+++ b/client/assets/styles/style.css
@@ -53,12 +53,46 @@ main {
     flex-direction: column;
 }
 
+a:hover {
+    text-decoration: underline;
+}
+
+.search-bar {
+    height: 40px;
+    max-width: 500px;
+    width: 100%;
+    border-radius: 20px;
+    border: 1px solid #3a3b41;
+    margin-bottom: 20px;
+
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.search-bar>input {
+    width: 80%;
+    background-color: transparent;
+    border: none
+}
+
+.search-bar:hover {
+    background-color: #3a3b41;
+
+}
+
 .btn {
     border: none;
     padding: 10px;
     background-color: #2c2d32;
     border-radius: 3px;
     color: white;
+    border: 1px solid #2c2d32;
+
+}
+
+.btn:hover {
+    border-color: #bdc1c6;
 }
 
 footer>* {
@@ -70,4 +104,19 @@ footer>* {
 .banner {
     text-align: center;
     border-top: #bdc1c6 1px solid;
+}
+
+@media (max-width:500px) {
+    a {
+        font-size: 8px;
+    }
+
+    .btn {
+        font-size: 10px;
+    }
+
+    footer>* {
+        font-size: 8px;
+    }
+    
 }
