Add first version of display data

--- a/client/assets/styles/style.css
+++ b/client/assets/styles/style.css
@@ -109,6 +109,15 @@ footer>* {
     border-top: #bdc1c6 1px solid;
 }
 
+.hidden {
+    display: none;
+}
+
+.search-link {
+    text-decoration: underline;
+    color: blue;
+}
+
 @media (max-width:500px) {
     a {
         font-size: 8px;
